# clicool

./: .coverage  .gitignore  .pypirc  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  USAGE.md  aplikasi.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
clicool/: __init__.py  __main__.py  cli.py  config.py
clicool/core/: __init__.py  generator.py  injector.py  shell.py  terminal.py  theme_loader.py  validator.py
clicool/features/: __init__.py  animations.py  doctor.py  layers.py  preview.py  widgets.py
clicool/plugins/: __init__.py
clicool/profiles/: __init__.py
clicool/safety/: __init__.py  backup.py  diff.py  rollback.py
clicool/utils/: __init__.py  colors.py  fonts.py  logging.py  templates.py
docs/: GITHUB_AUTH.md  RELEASE.md
scripts/: release.sh
templates/bash/: prompt.sh.j2
templates/fish/: prompt.sh.j2
templates/zsh/: prompt.sh.j2
tests/: __init__.py  conftest.py
tests/fixtures/: __init__.py
tests/integration/: __init__.py  test_workflow.py
tests/unit/: test_injector.py  test_shell.py  test_theme_loader.py
themes/builtin/: cyberpunk.json  devops.json  matrix.json  minimal.json  retro.json
themes/layers/: aws-profile.json  docker-info.json  git-status.json  k8s-context.json
